Fixed issue: bootswatch, site name unvisible on mouse over

--- a/themes/survey/bootswatch/css/theme.css
+++ b/themes/survey/bootswatch/css/theme.css
@@ -379,7 +379,7 @@ Responsive navbar-brand image CSS
 }
 
 body .navbar-default .navbar-brand:hover {
-    color: #ffffff;
+    
 }
 
 /* Only use <label> to get vertical align easy. Don't want boldness. */
